# Djinn_Mesh_Manipulation

./: README.md  bash.sh  djinn  imgui.ini
Djinn/: CMakeLists.txt  README.md
Djinn/common/: CoinRainEmitter.cpp  CoinRainEmitter.h  IntParticleEmitter.cpp  IntParticleEmitter.h  SmokeEmitter.cpp  SmokeEmitter.h  camera.cpp  camera.h  light.cpp  model.h
Djinn/djinn/: main.cpp
Djinn/djinn/OBJs/: Djinn.mtl  cloud.mtl  clouds.mtl  coin.mtl  genie_lamp.mtl  table.mtl
Djinn/djinn/Shaders/particles-shaders/: blueSmoke.fragmentshader  blueSmoke.vertexshader  coinRain.fragmentshader  coinRain.vertexshader
Djinn/djinn/Shaders/shadowMap-shaders/: ShadowMapping.fragmentshader  ShadowMapping.vertexshader
